# graph-paper-ai

./: .gitignore  README.md  app.py  extract_text.py  main.py  parse_pdf.py  pyproject.toml  query_pdf.py  requirements.txt  scratch_test.py  scratch_test_options.py  scratch_test_schemas_json.py  test_captions.py  test_image.py
notebooks/: test_pipeline.ipynb
src/: exceptions.py  pipeline.py
src/extraction/: __init__.py  extract_caption.py  image_extractor.py  image_test_extract.py  parser.py
src/ingestion/: __init__.py  _marker_worker.py  graph.py  parser.py  references.py  spatial.py  tree.py  utils_class.py
src/llm/: ollama_client.py
src/query/: __init__.py  anchor_extraction.py  generator.py
src/retrieval/: __init__.py  retriever.py  traversal.py  tree_search.py
tests/: scratch_test_schemas.py  test_graph.py  test_llamaparse.py  test_llm.py  test_parser.py  test_query.py  test_references.py  test_retrieval.py  test_spatial.py  test_tree.py  test_tree_search.py
